# cmf_hft_entry_task

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  custom_metric.cpp  custom_strategy.cpp  lob_tiny.csv  trade_from_files.cpp  trades_tiny.csv
include/: logging.hpp  types.hpp
include/data_loader/: args_parses.hpp  csv_parser.hpp
include/execution/: backtesing_engine.hpp  market_engine.hpp  orders.hpp
include/metrics/: metric_abstract.hpp  metrics_calculator.hpp  predefined_metrics.hpp
include/vaults/: portfolio.hpp  predefined_strategies.hpp  strategies.hpp
src/: backtesting_engine.cpp  csv_parser.cpp  market_engine.cpp  metrics_calculator.cpp  orders.cpp  portfolio.cpp  predefined_metrics.cpp  predefined_strategies.cpp  strategies.cpp
