cmake_minimum_required(VERSION 3.20)
project(examples)

file(GLOB_RECURSE EXAMPLES_SOURCES "*.cpp")
foreach(example_src ${EXAMPLES_SOURCES})
    get_filename_component(example_name ${example_src} NAME_WE)
    add_executable(${example_name} ${example_src})
    target_link_libraries(${example_name} PRIVATE hft_task)
    target_include_directories(${example_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
endforeach()
